# neocitizen

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: neocities.yml  pytest.yml
neocitizen/: __init__.py  api.py  cli.py  errors.py  types.py  utils.py
tests/: conftest.py  env.py  test_neocities.py
tests/data/: index.html
tests/data/dir0/: file00.html  file01.html
tests/data/dir1/: file10.html  file11.html
tests/data/dir1/dir10/: file100.html
tests/data/dir1/dir11/: file110.html
tests/neocitizen/: conftest.py  mock_server.py  test___init__.py  test_api.py  test_cli.py  test_utils.py
